--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,10 @@
+---
 services:
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_SERVER_ID: 1
       ZOOKEEPER_TICK_TIME: 2000
     ports:
       - 22181:2181
@@ -12,25 +14,21 @@ services:
     depends_on:
       - zookeeper
     ports:
-      - 29092:9092
-      - 19092:19092
+      - 29092:9092      
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092, CONNECTIONS_FROM_HOST://localhost:19092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT,CONNECTIONS_FROM_HOST:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092   
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
     healthcheck:
       test: nc -z localhost 9092 || exit -1
-      start_period: 15s
       interval: 5s
       timeout: 10s
-      retries: 10
+      retries: 5
 
   db-user:
     image: postgres
-    restart: always
+    restart: always    
     volumes:
       - tfg:/var/lib/postgresql/db-user
     ports:
@@ -39,18 +37,10 @@ services:
       POSTGRES_USER: tfg
       POSTGRES_PASSWORD: tfg
     healthcheck:
-      test:
-        [
-          "CMD",
-          "pg_isready",
-          "-q",
-          "-d",
-          "${POSTGRES_DB:-tfg}",
-          "-U",
-          "${POSTGRES_USER:-tfg}"
-        ]
-      timeout: 35s
+      test:        
+        ["CMD-SHELL","pg_isready -U tfg"]
       interval: 10s
+      timeout: 10s    
       retries: 5
 
   db-crm:
@@ -65,17 +55,9 @@ services:
       POSTGRES_PASSWORD: tfg
     healthcheck:
       test:
-        [
-          "CMD",
-          "pg_isready",
-          "-q",
-          "-d",
-          "${POSTGRES_DB:-tfg}",
-          "-U",
-          "${POSTGRES_USER:-tfg}"
-        ]
-      timeout: 35s
+        ["CMD-SHELL","pg_isready -U tfg"]
       interval: 10s
+      timeout: 10s
       retries: 5
 
   db-core:
@@ -90,17 +72,9 @@ services:
       POSTGRES_PASSWORD: tfg
     healthcheck:
       test:
-        [
-          "CMD",
-          "pg_isready",
-          "-q",
-          "-d",
-          "${POSTGRES_DB:-tfg}",
-          "-U",
-          "${POSTGRES_USER:-tfg}"
-        ]
-      timeout: 35s
+        ["CMD-SHELL","pg_isready -U tfg"]
       interval: 10s
+      timeout: 10s
       retries: 5
 
   adminer:
